packages/parser/test/parser/E0139-import-declaration.txt
import test, from "./test"
===== err =====
anonymous:1:13: ParseError: E0139 - Expected identifier after import declaration specifier imported name
1 | import test, from "./test"
  |             ^
